--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,18 +3,62 @@ name: CI
 on:
   push:
       branches: [develop]
-  pull_request:
-      branches: [develop]
 
 jobs:
-  build:
-    # FIXME: This builds with macOS 10.15. Move this to the 11.0 builders when possible. (See: https://github.com/actions/virtual-environments/issues/2486)
-    runs-on:  macos-latest
+  build-x64:
+    runs-on: macos-latest
+
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: ./other/download_libs.sh
+      - name: Download dependencies
+        run: |
+          pwd
+          curl -LO https://nightly.link/iina-plus/homebrew-mpv-iina/actions/runs/2325943048/deps.zip
+          unzip -d deps deps
+          /usr/bin/sed -i '' 's/libswscale.6.dylib/libswscale.5.dylib/g' iina.xcodeproj/project.pbxproj
+          /usr/bin/sed -i '' 's/libavformat.59.dylib/libavformat.58.dylib/g' iina.xcodeproj/project.pbxproj
+          /usr/bin/sed -i '' 's/libavcodec.59.dylib/libavcodec.58.dylib/g' iina.xcodeproj/project.pbxproj
+          /usr/bin/sed -i '' 's/libavfilter.8.dylib/libavfilter.7.dylib/g' iina.xcodeproj/project.pbxproj
+          /usr/bin/sed -i '' 's/libavutil.57.dylib/libavutil.56.dylib/g' iina.xcodeproj/project.pbxproj
 
-      - name: Build
-        run: xcodebuild -project iina.xcodeproj -scheme iina CODE_SIGNING_ALLOWED=NO
+      - name: Archive
+        run: make archive
+
+      - name: Create tar
+        run: |
+          rm -rf ./IINA.app
+          mv ./archive.xcarchive/Products/Applications/IINA.app .
+          otool -L ./IINA.app/Contents/MacOS/IINA
+          tar Jcvf iina.tar.xz ./IINA.app
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: IINA-x86_64
+          path: ./iina.tar.xz
+
+  build-arm64:
+    runs-on: self-hosted
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Depends
+        run: make depends
+
+      - name: Archive
+        run: |
+          make clean
+          xcodebuild -project iina.xcodeproj -scheme iina -config Release -archivePath ./archive archive -arch arm64
+
+      - name: Create tar
+        run: |
+          rm -rf ./IINA.app
+          mv ./archive.xcarchive/Products/Applications/IINA.app .
+          otool -L ./IINA.app/Contents/MacOS/IINA
+          tar Jcvf iina.tar.xz ./IINA.app
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: IINA-arm64
+          path: ./iina.tar.xz
